<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="280dp"
    android:background="@color/colorMainBackground"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_black_button_background"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/show_all"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_black_button_background"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/show_city"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_black_button_background"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/show_electric"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_black_button_background"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/show_kids"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>