<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="280dp"
    android:background="@color/colorMainBackground"
    android:id="@+id/rename_picture_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorCustomItem"
        android:gravity="center"
        android:text="@string/dialogLoginTitle"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_toStartOf="@+id/dialog_text_phone"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/phoneNumber"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/dialog_text_phone"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorCustomItem"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_toStartOf="@+id/dialog_text_password"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dialog_text_password"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorCustomItem"
            android:gravity="center"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_black_button_background"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/teal_700"
            android:text="Реєстрація" />
    </LinearLayout>
</LinearLayout>