<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="7dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_black_button_background"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/choose_bike"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bicycleRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/choose_time"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="30 хв" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="1 год" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="3 год" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="6 год" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="12 год" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_black_button_background"
                    android:textSize="10sp"
                    android:text="24 год" />

            </LinearLayout>

            <Button
                android:id="@+id/go_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_run_button"
                android:foreground="?android:selectableItemBackground"
                android:layout_margin="8dp"
                android:text="@string/run" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>