<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minWidth="280dp"
    android:background="@color/colorMainBackground"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:background="@drawable/bank_card"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_round_drawable"
            android:maxLength="16"
            android:hint="XXXX XXXX XXXX XXXX"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/teal_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextCardDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_round_drawable"
                android:maxLength="4"
                android:hint="mm / yy"
                android:inputType="numberDecimal"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_700" />

            <EditText
                android:id="@+id/editTextCardCVV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_round_drawable"
                android:maxLength="3"
                android:hint="CVV"
                android:inputType="numberDecimal"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_700" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:gravity="center"
        android:text="1 гривня = 5 Rental Coins" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/custom_dark_item_background">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/amount_to_pay"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textView15"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="30dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text="= " />

        <TextView
            android:id="@+id/grnTOrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text=" RC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_dark_item_background"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_run_button"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/pay"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>